--- a/font/CSSs/cavecera.css
+++ b/font/CSSs/cavecera.css
@@ -6,20 +6,22 @@
     justify-content: space-between;
 }
 .menu-barra{
-    background-color: rgb(3, 66, 66);
+
       width: auto;
       margin-top: auto;
       margin-bottom: auto;
       margin-right: 3vh;
 }
-a{
+    .menu-item::first-letter {
+        color: #d18109;
+    }
     .menu-item {
         color: white;
         text-decoration: none;
-        padding: 10px;
-      }
+        padding: 20px;
+    }
 
-      .menu-item:hover {
+    .menu-item:hover {
         background-color: #333;
+        pointer-events: painted;
       }
-}
