--- a/font/CSSs/cavecera.css
+++ b/font/CSSs/cavecera.css
@@ -1,3 +1,4 @@
+
 .cabecera{
     background-color: black;
     color: rgb(255, 255, 255);
@@ -5,21 +6,25 @@
     flex-direction: row;
     justify-content: space-between;
 }
+.cabecera img{
+    background-color: black;
+}
 .menu-barra{
-
-      width: auto;
-      margin-top: auto;
-      margin-bottom: auto;
-      margin-right: 3vh;
+    background-color: black;
+    width: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 3vh;
 }
 
     .menu-item {
+        background-color: black;
         color: white;
         text-decoration: none;
         padding: 20px;
     }
 
     .menu-item:hover {
-        background-color: #333;
+        background-color: #eb7201;
         pointer-events: painted;
       }
